added meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="style.css">
+    <meta name = "description" content = "My first little profile page">
+    <meta property="og:url" content="https://chrishaegner.github.io/profile/" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:title" content="When Great Minds Don’t Think Alike" />
+    <meta property="og:description" content="My first little profile page" />
+    <meta property="og:image" content="https://chrishaegner.github.io/profile/images/Chris.png" />
   </head>
   <body>
     <div class="container">
