added two final tags

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name = "description" content = "My first little profile page">
     <meta property="og:url" content="https://chrishaegner.github.io/profile/" />
     <meta property="og:type" content="profile" />
-    <meta property="og:title" content="When Great Minds Don’t Think Alike" />
+    <meta property="og:title" content="Chris' mighty profile" />
     <meta property="og:description" content="My first little profile page" />
     <meta property="og:image" content="https://chrishaegner.github.io/profile/images/Chris.png" />
+    <meta property="og:site_name" content="My github profile page">
   </head>
   <body>
     <div class="container">
