kicked pic from meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="profile" />
     <meta property="og:title" content="Chris' mighty profile" />
     <meta property="og:description" content="My first little profile page" />
-    <meta property="og:image" content="https://chrishaegner.github.io/profile/images/Chris.png" />
+    <!-- <meta property="og:image" content="https://chrishaegner.github.io/profile/images/Chris.png" /> -->
     <meta property="og:site_name" content="My github profile page">
   </head>
   <body>
